# XFeat_SLAM

./: .gitignore  CMakeLists.txt  README.md
inc/: frame_manager.h  interpolate_sparse_2d.h  load_data.h  load_images.h  model_inference.h  model_inference_onnx.h  model_inference_torch.h  pose_estimation.h  utils.h  visualize.h  xfeat.h
models/: xfeat.onnx  xfeat_vga.onnx
src/: frame_manager.cc  interpolate_sparse_2d.cc  load_data.cc  load_images.cc  main.cc  model_inference.cc  model_inference_onnx.cc  model_inference_torch.cc  pose_estimation.cc  utils.cc  visualize.cc  xfeat.cc
